# renderflow

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
examples/minimal-provider/: README.md  app.py  pyproject.toml  requirements.txt
examples/minimal-provider/minimal_provider/: app_definition.py  renderflow.py
examples/minimal-provider/minimal_provider/workflows/: greeting.py  series_plot.py
renderflow/: __init__.py  app.py  autodefine.py  cli.py  contracts.py  discovery.py  param_options.py  progress.py  results.py  streamlit_renderer.py  workflow.py
tests/: test_cli_provider_mode.py  test_execute_figure_export.py  test_streamlit_dynamic_options.py
