[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-provider"
version = "0.1.0"
description = "Minimal renderflow provider example"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "renderflow>=0.1.0",
]

[project.entry-points."renderflow.providers"]
minimal-provider = "minimal_provider.renderflow:get_app_spec"

[tool.setuptools.packages.find]
include = ["minimal_provider*"]
